<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alert_cant_assign">Repeat tasks can not be assigned to someone.</string>
    <string name="alert_cant_load_image">This Image can not be loaded</string>
    <string name="alert_check_internet">Please check your internet connection</string>
    <string name="alert_complete">Do you want to mark this task as complete?</string>
    <string name="alert_delete_attachment">Do you want to delete this attachment?</string>
    <string name="alert_delete_label">Do you want to delete this label?</string>
    <string name="alert_delete_task">Do you want to delete this task?</string>
    <string name="alert_exit_app">Are you sure you want to exit?</string>
    <string name="alert_future_tasks_or_this_task_only">Do you want to update current task or all future tasks?</string>
    <string name="alert_gallery_not_found">Gallery not found</string>
    <string name="alert_image_size_msg">Image size must be less than 3MB</string>
    <string name="alert_multiple_complete">Do you want to mark selected tasks as complete?</string>
    <string name="alert_multiple_delete">Do you want to delete selected tasks?</string>
    <string name="alert_no_data_available">No Data Available</string>
    <string name="alert_no_data_found">No Data Found</string>
    <string name="alert_no_email">No email client found.</string>
    <string name="alert_no_reminder">Reminder not found</string>
    <string name="alert_permission_denied">Permission Denied</string>
    <string name="alert_reject_task">Do you want to reject this task?</string>
    <string name="alert_required_permissions_not_granted">Cancelling, required permissions are not granted</string>
    <string name="alert_reset_reminder">Please reset your reminder(s) according your selected time</string>
    <string name="alert_reset_reminder_time">Please reset your time</string>
    <string name="alert_search_not_found">GoTaskMe couldn’t find any task related to your search</string>
    <string name="alert_search_task_not_found">GoTaskMe couldn’t find any task related to your search</string>
    <string name="alert_select_date_time_first">Please select date and time first</string>
    <string name="alert_size_msg">Attachment size must be less than</string>
    <string name="alert_turn_off_repeat">Do you want to stop repeat occurrences?</string>
    <string name="alert_turn_on_repeat">Do you want to start repeat occurrences?</string>
    <string name="alert_undone_task">Do you want to mark this task as incomplete?</string>
    <string name="alter_map">Please install map application</string>
    <string name="app_name">FileSelectionDemo</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">96f2c8ab-6923-411f-8d52-56fd8e38f522</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="default_web_client_id">279060164941-jvi2ke222irgtfoi59gjst5augf8gidm.apps.googleusercontent.com</string>
    <string name="error_add_label">You can\'t add more labels</string>
    <string name="error_enter_label_name">Please enter Label Name</string>
    <string name="error_enter_name">Please enter your profile name</string>
    <string name="error_enter_otp_code">Please enter OTP code</string>
    <string name="error_enter_task_name">Please enter task name</string>
    <string name="error_enter_task_note">Please enter note</string>
    <string name="error_enter_task_time">Please select task date and time</string>
    <string name="error_no_more">More than</string>
    <string name="error_no_more_images">files are not allowed as attachment</string>
    <string name="error_please_enter_contact_no">Please enter your mobile number</string>
    <string name="error_please_enter_country_code">Please enter your country code</string>
    <string name="error_please_enter_valid_contact_no">Please enter valid mobile number</string>
    <string name="error_same_label">Label already exist</string>
    <string name="error_select_task_time">Please select task date and time</string>
    <string name="error_sms">SMS failed, please try again later.</string>
    <string name="error_something_went_wrong">Something Went wrong</string>
    <string name="error_speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://gotask-21a19.firebaseio.com</string>
    <string name="gcm_defaultSenderId">279060164941</string>
    <string name="google_api_key">AIzaSyDoxzl3BzkUW8FY_zRHXa8veYymOVjFe3c</string>
    <string name="google_app_id">1:279060164941:android:b9757482a2313a5c15c704</string>
    <string name="google_crash_reporting_api_key">AIzaSyDoxzl3BzkUW8FY_zRHXa8veYymOVjFe3c</string>
    <string name="google_maps_key">AIzaSyBwIiyW8shq5DBgJ7vaFX950Vhx4Fl87po</string>
    <string name="google_storage_bucket">gotask-21a19.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hint_add_task_here">Add Task Here</string>
    <string name="hint_assign_to">Assign task</string>
    <string name="hint_choose_a_attachment_type">Select a file Choose a attachment type..</string>
    <string name="hint_contact_no">2546963649</string>
    <string name="hint_country_code">1</string>
    <string name="hint_enter_place_here">Enter Place Here</string>
    <string name="hint_otp">X</string>
    <string name="hint_search_by">Search by Title or Description</string>
    <string name="hint_search_here">Search here</string>
    <string name="hint_your_profile_name">Your Profile Name</string>
    <string name="menu_business">Business</string>
    <string name="menu_home">Home</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_labels">Labels</string>
    <string name="menu_personal">Personal (02)</string>
    <string name="menu_private">Private</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_today">Today</string>
    <string name="menu_work">Work</string>
    <string name="msg_failed_to_load_image_gallery">Failed to load image</string>
    <string name="msg_please_wait">Please Wait..</string>
    <string name="msg_press_back_again">Press back again</string>
    <string name="msg_profile_update">Profile Updated successfully</string>
    <string name="msg_restart_your_app">Please restart the app</string>
    <string name="text_camera">Camera</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_file">File</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_video">Video</string>
</resources>