<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llImageSource"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottom_sheet_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha="1"
        android:background="#00000000"
        android:orientation="vertical"
        android:padding="@dimen/padding_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_white_add_task"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_weight="1"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/margin_10"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_8"
                android:text="@string/hint_choose_a_attachment_type"
                android:textColor="@color/lightgrey"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/txtCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_15"
                android:text="@string/text_camera"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/txtGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_15"
                android:text="@string/text_gallery"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/txtFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_15"
                android:text="@string/text_file"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/txtVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_15"
                android:text="@string/text_video"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_8"
            android:background="@drawable/bg_white_add_task"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_15"
                android:text="@string/text_cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
